--- a/templates/users_list.html
+++ b/templates/users_list.html
@@ -12,8 +12,14 @@
     {% endfor %}
 </ul>
 
-<a href="/users/new">
-    <button class="btn btn-success">Add User</button>
-</a>
+<div>
+    <a href="/users/new">
+        <button class="btn btn-success">Add User</button>
+    </a>
+    <a href="/">
+        <button class="btn btn-primary">Home</button>
+    </a>
+</div>
+
 
 {% endblock %}
